# craton-bolt

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  NOTICE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  build.rs  ci_local.sh  continue_prompt.md  deny.toml  err2.txt  err3.txt  err_compile.txt
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/.wf/: ci.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: ci.yml  dco.yml
benches/: compute_benchmarks.rs  olap_benchmarks.rs  query_benchmarks.rs  regression.rs  utf8_sort_bench.rs
docs/: API_SURFACE.md  ARCHITECTURE.md  BENCHMARKS.md  BLOCKED_ACTIONS.md  COMPETITIVE_BENCHMARKING.md  CONTRIBUTING_KERNEL.md  CUDARC_ADOPTION.md  CUDA_OXIDE_SWEEP.md  DEVELOPMENT.md  ENV_VARS.md  FAQ.md  GROUPBY_PERF.md  INSTALL.md  JIT_PIPELINE.md  LIMITATIONS.md  MARKETING.md  MIGRATION_GUIDE.md  MILESTONE_0_4.md  PATH_TO_1.0.md  SQL_REFERENCE.md  TWOKEY_SIBLING_OPS.md  USER_GUIDE.md
docs/rust_cuda/: 01_toolchain_audit.md  02_kernel_inventory.md  03_partition_kernel_spike.md  04_build_integration.md  05_ptx_loader_compat.md  06_milestone_proposal.md  07_risk_assessment.md  09_v02_handemit_tag.md  10_wave_a_checklist.md  11_fallback_b_pr.md
examples/: groupby.rs  profile_groupby.rs  profile_overhead.rs  quickstart.rs
kernels/: Cargo.toml  rust-toolchain.toml
kernels/src/: lib.rs
reviews/: ORCHESTRATION.md  PERF_BACKLOG.md  SYNTHESIS.md  build_kernels.md  cuda.md  docs.md  done_A.md  done_B.md  done_C.md  done_D.md  done_E.md  done_F.md  done_G.md  done_GS.md  done_H.md  done_I.md  done_IL.md  done_J.md  done_K.md  done_L.md  done_M.md  done_N.md  done_PA.md  done_PB.md  done_W.md  exec_core.md  exec_groupby.md  exec_strings.md  jit.md  oss_readiness.md  tests.md
reviews/fresh/: FEATURES_APPLIED.md  FIXES_APPLIED.md  SYNTHESIS.md  core.md  cuda.md  docs.md  exec_core.md  exec_groupby.md  exec_strings.md  jit_core.md  jit_kernels.md  oss_readiness.md  plan.md  tests.md
src/: error.rs  lib.rs  metrics.rs  observability.rs
src/cuda/: async_copy.rs  buffer.rs  cuda_sys.rs  cudarc_backend.rs  dictionary.rs  dictionary_any.rs  dictionary_i64.rs  mem_pool.rs  mod.rs  smart_ptrs.rs  stream_pool.rs
src/exec/: agg_with_pre.rs  aggregate.rs  async_copy.rs  compact.rs  dict_registry.rs  distinct.rs  engine.rs  engine_agg_impl.rs  engine_cache_key.rs  engine_device_col.rs  engine_join_impl.rs  engine_provider.rs  engine_query.rs  engine_streaming_impl.rs  engine_string_impl.rs  engine_support.rs  expr_agg.rs  extended_agg.rs  filter.rs  gpu_compact.rs  gpu_compact_multipass.rs  gpu_join.rs  gpu_sort.rs  gpu_table.rs  gpu_upload.rs  groupby.rs  groupby_common.rs  groupby_shmem_avg_exec.rs  groupby_shmem_count_exec.rs  groupby_shmem_dispatch.rs  groupby_shmem_exec.rs  groupby_shmem_launch.rs  groupby_shmem_minmax_exec.rs  groupby_shmem_multi_exec.rs  groupby_tier2_avg_exec.rs  groupby_tier2_common.rs  groupby_tier2_count_exec.rs  groupby_tier2_dispatch.rs  groupby_tier2_exec.rs  groupby_tier2_merge.rs  (+38 more)
src/flight/: encode.rs  mod.rs  server.rs  sql.rs
src/jit/: agg_kernels.rs  date_scalar.rs  decimal_agg.rs  disk_cache.rs  distinct_kernel.rs  float_atomics.rs  hash_join_kernel.rs  hash_kernels.rs  jit_compiler.rs  mod.rs  partition_kernel.rs  partition_kernel_i64.rs  partition_reduce_kernel.rs  partition_reduce_kernel_count.rs  partition_reduce_kernel_count_i64.rs  partition_reduce_kernel_i64.rs  partition_reduce_kernel_minmax.rs  partition_reduce_kernel_minmax_float.rs  partition_reduce_kernel_minmax_float_i64.rs  partition_reduce_kernel_minmax_i64.rs  partition_reduce_kernel_multi.rs  partition_reduce_kernel_multi_i64.rs  partition_reduce_kernel_spill_common.rs  prefix_scan.rs  prefix_scan_multipass.rs  ptx_gen.rs  scan_kernel.rs  scatter_kernel.rs  scatter_kernel_i64.rs  scatter_values_by_dest_idx_kernel.rs  scatter_with_dest_idx_kernel.rs  shmem_count_kernel.rs  shmem_minmax_kernel.rs  shmem_multi_sum_kernel.rs  shmem_sum_kernel.rs  sort_kernel.rs  sort_kernel_radix.rs  string_kernel.rs  valid_flag_float.rs  valid_flag_kernels.rs  (+1 more)
src/plan/: dataframe.rs  explain.rs  logical_plan.rs  mod.rs  physical_plan.rs  rewrite.rs  sql_frontend.rs  statistics.rs  string_literal_rewrite.rs  subquery.rs  suggest.rs
src/plan/optimizer/: cost.rs  (+8 more)
tests/: aggregate_aliasing_test.rs  aggregate_nulls_e2e.rs  between_test.rs  case_folding_test.rs  case_when_test.rs  cast_test.rs  coalesce_nullif_test.rs  concurrent_streams_test.rs  cuda_stub_contract_test.rs  dataframe_collect_test.rs  datetime_types_test.rs  decimal_type_test.rs  did_you_mean_test.rs  diff_duckdb.rs  diff_duckdb_semantics.rs  doc_consistency_test.rs  e2e_tests.rs  engine_builder_test.rs  env_var_smoke.rs  gpu_join_e2e.rs  groupby_resident_replace_regression.rs  having_test.rs  in_list_test.rs  is_null_test.rs  joins_e2e.rs  like_test.rs  memory_pool_stress.rs  memory_tests.rs  metrics_hotpath_test.rs  non_equi_join_test.rs  optimizer_equivalence_test.rs  parser_tests.rs  post_aggregate_exprs_test.rs  ptx_golden_partition_snapshots.rs  ptx_golden_tests.rs  qualified_columns_test.rs  register_stream_test.rs  semantics_e2e.rs  setops_e2e_test.rs  shmem_groupby_e2e.rs  (+15 more)
tests/common/: mod.rs
tests/snapshots/: ptx_golden_partition_snapshots__partition_reduce.snap  ptx_golden_partition_snapshots__partition_reduce_count.snap  ptx_golden_partition_snapshots__partition_reduce_count_i64.snap  ptx_golden_partition_snapshots__partition_reduce_count_i64_spill.snap  ptx_golden_partition_snapshots__partition_reduce_count_spill.snap  ptx_golden_partition_snapshots__partition_reduce_i64.snap  ptx_golden_partition_snapshots__partition_reduce_i64_spill.snap  ptx_golden_partition_snapshots__partition_reduce_minmax_float_i64_max_f32.snap  ptx_golden_partition_snapshots__partition_reduce_minmax_float_i64_max_f64.snap  ptx_golden_partition_snapshots__partition_reduce_minmax_float_i64_max_f64_spill.snap  ptx_golden_partition_snapshots__partition_reduce_minmax_float_i64_min_f32.snap  (+29 more)
(+3 files in other folders)
