[package]
name = "craton-patina"
version = "0.1.0"
edition = "2021"
description = "JIT-compiled GPU SQL engine — runtime PTX codegen with Rust-tracked CUDA memory safety"
license = "Apache-2.0"
authors      = ["Craton Software Company <opensource@cratonsoftware.com>"]
repository   = "https://github.com/craton-co/craton-patina"
homepage     = "https://github.com/craton-co/craton-patina"
documentation = "https://docs.rs/craton-patina"
readme       = "README.md"
keywords     = ["sql", "gpu", "cuda", "jit", "arrow"]
categories   = ["database", "compilers"]
rust-version = "1.74"
exclude      = ["target/*", ".idea/*", ".github/*"]

# --- Workspace shim ---------------------------------------------------------
#
# Craton Patina is a single-crate project, but the rust-cuda spike adds a sibling
# `kernels/` directory that:
#   - must NOT be built by the host's `cargo build` (it targets nvptx64 and
#     needs a separate nightly toolchain — see kernels/rust-toolchain.toml),
#   - must NOT be implicitly auto-detected as a workspace member, because
#     cargo would then try to compile it with the host's stable toolchain.
#
# Declaring an explicit `[workspace]` block with empty `members` and
# `kernels/` in `exclude` keeps cargo from descending into it on
# `cargo build` / `cargo test`. The `kernels/` crate is invoked exclusively
# via `cuda_builder` from this crate's `build.rs` when the `rust-cuda`
# feature is enabled.
#
# See docs/rust_cuda/04_build_integration.md §5 for the rationale.
[workspace]
members  = []
exclude  = ["kernels", ".claude/worktrees"]

[lib]
name = "craton_patina"
path = "src/lib.rs"

[dependencies]
arrow = "53"
arrow-array = "53"
arrow-buffer = "53"
arrow-schema = "53"
sqlparser = "0.52"
thiserror = "1"
parking_lot = "0.12"
once_cell = "1"
bytemuck = { version = "1", features = ["derive"] }
libc = "0.2"
log = "0.4"
# cudarc: optional pure-Rust CUDA Driver API binding. Gated on the
# `cudarc` feature. See docs/CUDARC_ADOPTION.md for the migration plan.
# v0.13 supports CUDA 12.x with stable Rust. Default features off — we
# only need `driver` for Stage 1.
cudarc = { version = "0.13", optional = true, default-features = false, features = ["driver", "cuda-12060"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
polars = { version = "0.42", default-features = false, features = ["lazy"] }
# DuckDB is the canonical embedded-OLAP reference (see docs/COMPETITIVE_BENCHMARKING.md).
# Bundled feature compiles DuckDB in-tree so the bench is reproducible without an
# external install; build is slow (~5–10 min first time) but cached thereafter.
duckdb = { version = "1.0", features = ["bundled"] }

[features]
default = []
# Stub-mode lets non-CUDA hosts at least compile; real builds use the linked CUDA path.
cuda-stub = []
# `cudarc` backend (Stage 1, spike): routes a handful of low-level CUDA
# driver calls through the `cudarc` crate instead of our hand-rolled
# `extern "C"` FFI. Not the default yet — turn on with
# `cargo build --features cudarc` to opt in. See docs/CUDARC_ADOPTION.md.
cudarc = ["dep:cudarc"]
# `rust-cuda` (Wave A spike): switches `partition_kernel.rs`'s PTX source
# from the hand-rolled string emitter to a Rust-source kernel compiled at
# build time via `cuda_builder` (rustc_codegen_nvvm). Requires the rust-cuda
# toolchain installed (nightly + libNVVM + LLVM, see kernels/rust-toolchain.toml).
# Default build remains hand-emit and bit-identical. See
# docs/rust_cuda/08_wave_a_outcome.md.
rust-cuda = ["dep:cuda_builder"]

[build-dependencies]
# `cuda_builder` is the build-time entry point to rust-cuda's NVVM codegen
# backend. Optional + feature-gated so default builds (which do NOT have
# the rust-cuda toolchain) ignore the dep entirely. Pulled in only when
# `--features rust-cuda` is on.
cuda_builder = { version = "0.3", optional = true }

[[bench]]
name = "query_benchmarks"
harness = false

[[bench]]
name = "olap_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[package.metadata.docs.rs]
features = ["cuda-stub"]
rustdoc-args = ["--cfg", "docsrs"]
